<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_shares">Post shares</string>
    <string name="description_post_views">Post views</string>
    <string name="description_cancel_input">Cancel input</string>
    <string name="description_editing_mode">Editing mode</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Save</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="description_video_preview">Video preview</string>
    <string name="description_video_title">Video title</string>
    <string name="description_video_views">Views</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_create_new_post">User %1$s  posted a new post:</string>
    <string name="empty_posts">No posts\n</string>
    <string name="error_loading">loading error</string>
    <string name="retry_loading">retry loading</string>
    <string name="attachmentImage">Attachment Image</string>
    <string name="load_new_posts">New posts %1$d</string>
    <string name="remove">Remove</string>
    <string name="description_post_comments">Post Comments\n</string>
    <string name="preview">Preview</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="name">name</string>
    <string name="password_confirmation">confirmation</string>
</resources>