<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:text="@string/nmedia"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="200dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/border"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/login" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_key_24"
                android:drawablePadding="10dp"
                android:hint="@string/password" />

            <EditText
                android:id="@+id/password_confirmation_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_key_24"
                android:drawablePadding="10dp"
                android:hint="@string/password_confirmation" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up" />


        </LinearLayout>


    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>